--- a/index.html
+++ b/index.html
@@ -2,13 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <base data-trunk-public-url />
-<!--    <link data-trunk rel="rust" data-bin="personal_branding" data-cargo-features="yew/csr" />-->
-    <link data-trunk rel="rust" data-bin="personal_branding_hydrate" data-cargo-features="hydration" />
 
-    <title>Yew App</title>
+    <link data-trunk rel="rust" data-bin="personal_branding" data-cargo-features="yew/csr" />
+<!--    <link data-trunk rel="rust" data-bin="personal_branding_hydrate" data-cargo-features="hydration" />-->
+
+    <link data-trunk href="./tailwind.css" rel="css" />
+
+    <title>Sinabro</title>
 </head>
-<body>
 
-</body>
+<body></body>
+
 </html>
