feat: Add rectangle button components and Apply tailwind custom variables

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link data-trunk rel="rust" data-bin="personal_branding" data-cargo-features="yew/csr" />
 <!--    <link data-trunk rel="rust" data-bin="personal_branding_hydrate" data-cargo-features="hydration" />-->
 
-    <link data-trunk href="./tailwind.css" rel="css" />
+    <link data-trunk href="./index.css" rel="css" />
 
     <title>Sinabro</title>
 </head>
