--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link data-trunk rel="rust" data-bin="personal_branding" data-cargo-features="yew/csr" />
 <!--    <link data-trunk rel="rust" data-bin="personal_branding_hydrate" data-cargo-features="hydration" />-->
 
-    <link data-trunk href="./index.css" rel="css" />
+    <link data-trunk rel="copy-dir" href="static" />
+    <link data-trunk rel="css" href="index.css" />
 
     <title>Sinabro</title>
 </head>
